--- a/dom/shopping/shopping-list.html
+++ b/dom/shopping/shopping-list.html
@@ -5,17 +5,8 @@
   <head>
     <meta charset="utf-8">
     <title>Shopping list example</title>
-    <style>
-      li {
-        margin-bottom: 10px;
-      }
+    <link rel="stylesheet" href="shopping-list.css">
 
-      li button {
-        font-size: 8px;
-        margin-left: 20px;
-        color: #666;
-      }
-    </style>
   </head>
   <body>
 
@@ -31,8 +22,6 @@
 
     </ul>
 
-    <script>
-
-    </script>
+    <script src="shoppingList.js"></script>
   </body>
 </html>
